# RestaurantManagementSystem

./: .gitignore  README.md  dockerfile  pyproject.toml  railway.json
admin_service/: config.py  database.py  main.py  models.py  models_choices.py
admin_service/api/: deps.py
admin_service/api/endpoints/: category.py  employee.py  menu.py
admin_service/api/internal/: auth.py
admin_service/core/: auth.py  config.py
admin_service/crud/: base.py  category.py  employee.py  menu.py  user.py
admin_service/schemas/: category.py  employee.py  menu.py
admin_service/schemas/internal/: admin.py
admin_service/utils/: rabbitmq.py  smtp_integration.py
alembic/: env.py
alembic/versions/: 684b7db83a89_init.py  951b734ff77e_enum.py  b6756cdb797b_init.py  f2d689a8623b_init.py
email_templates/: first_login.html  first_login.txt
tests/: conftest.py  factories.py  fixtures.py
tests/test_endpoint/: test_auth.py  test_category.py  test_menu.py
