[tool.poetry]
name = "admin-service"
version = "0.1.0"
description = ""
authors = ["Grzegorz Pustułka <grzegorzpustulka@onet.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.27.0.post1"
fastapi = "^0.109.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
